# asr-client-python

./: .dockerignore  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  docker-entrypoint.sh  install.sh  pyproject.toml  setup.sh  tox.ini
.github/workflows/: test.yml
asr_client/: __init__.py  __main__.py  audio_processing.py  dictation.py  v1.py
doc/: DOCUMENTATION.md
tests/: conftest.py  test_audio.py  test_channel.py  test_cli.py  test_integration.py  test_version.py
